--- a/package.json
+++ b/package.json
@@ -7,15 +7,17 @@
   },
   "dependencies": {
     "@stripe/stripe-js": "^2.4.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "framer-motion": "^11.18.2",
     "gif.js": "^0.2.0",
     "html2canvas": "^1.4.1",
-    "lucide-react": "^0.323.0",
+    "lucide-react": "^0.510.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.0",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.8.1",
     "react-parallax": "^3.5.1",
+    "react-router-dom": "^6.22.0",
     "react-tilt": "^1.0.2"
   },
   "devDependencies": {
